# desktop-neko

./: .antigravityrules  .gitignore  Cargo.toml  LICENSE  PACKAGE_GUIDE.md  README.md  README.md.bak  build.rs  build_package.py  create_dummy_sprites.py  cv_pipeline.py  fix_toml.py
.github/workflows/: build-macos.yml  build-windows.yml
src/: app.rs  main.rs  test_pixel.rs
src/package/: behavior.rs  loader.rs  manifest.rs  mod.rs  sprite.rs
src/pet/: animation.rs  instance.rs  mod.rs  movement.rs  state_machine.rs
src/ui/: pet_window.slint
src/window/: mod.rs  overlay.rs  tray.rs
