[package]
name = "desktop-neko"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1", features = ["backend-winit"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tray-icon = "0.22"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
directories = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winit = { version = "0.29" }
i-slint-backend-winit = "1.15"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor"] }

[build-dependencies]
slint-build = "1"
